--- a/example29/pom.xml
+++ b/example29/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>example29</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>example29</name>
-	<description>First Web Application</description>
+	<description>Easy School Web Application</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -58,7 +58,7 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jdbc</artifactId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
 		<dependency>
