--- a/example29/src/main/resources/application.properties
+++ b/example29/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://${Ivan_LocalHost:localhost}:3306/eazyschool
 spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.javax.persistence.validation.mode=none
