Configuring logging inside Spring Boot

--- a/example35/src/main/resources/application.properties
+++ b/example35/src/main/resources/application.properties
@@ -5,3 +5,15 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.javax.persistence.validation.mode=none
 spring.data.rest.base-path=/data-api
+
+#debug=true these two properties are NOT recommended to use
+#trace=true
+
+logging.level.root = INFO
+#logging.level.com.example.aspects = ERROR
+#logging.level.com.example.controllers = TRACE
+
+#Initialize log group app_error_group
+logging.group.app_error_group=com.example.controllers, com.example.aspects
+# Set log level to log group app_error_group
+logging.level.app_error_group = ERROR
