Demo of Properties Configuration & Spring Profiles

--- a/example36/pom.xml
+++ b/example36/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>example36</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>example36</name>
+	<packaging>jar</packaging>
 	<description>Easy School Web Application</description>
 	<properties>
 		<java.version>17</java.version>
