--- a/example36/src/main/resources/application.properties
+++ b/example36/src/main/resources/application.properties
@@ -1,7 +1,23 @@
+spring.config.import=application_prod.properties, application_uat.properties
+spring.profiles.active=uat
+
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${Ivan_LocalHost:localhost}:3306/eazyschool
+spring.datasource.url=jdbc:mysql://localhost:3306/eazyschool
 spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.javax.persistence.validation.mode=none
+spring.jpa.properties.jakarta.persistence.validation.mode=none
+
 spring.data.rest.base-path=/data-api
+
+property.pageSize=10
+
+property.contact.pageSize=5
+property.contact.successMsg=Your message is submitted successfully.
+
+property.branches[0]=Kyiv
+property.branches[1]=Lviv
+property.branches[2]=Dnipro
+property.branches[3]=New York
+
+
