Demo of Spring Boot Actuator & Admin

--- a/example37/src/main/resources/application.properties
+++ b/example37/src/main/resources/application.properties
@@ -20,4 +20,14 @@ property.branches[1]=Lviv
 property.branches[2]=Dnipro
 property.branches[3]=New York
 
+# Actuator properties
+management.endpoints.web.base-path=/eazyschool/actuator
+management.endpoints.web.exposure.include=*
+
+spring.application.name=EazySchool
+
+# Spring Boot Admin Server Configuration
+spring.boot.admin.client.url=http://localhost:9000
+spring.boot.admin.client.instance.metadata.user.name=admin@gmail.com
+spring.boot.admin.client.instance.metadata.user.password=admin
 
