--- a/example37/src/main/resources/application_uat.properties
+++ b/example37/src/main/resources/application_uat.properties
@@ -6,3 +6,6 @@ spring.jpa.properties.hibernate.format_sql=false
 logging.level.root=WARN
 logging.level.com.example.aspects=WARN
 property.contact.pageSize=15
+
+management.endpoint.env.show-values=always
+management.endpoint.configprops.show-values=always
